@@ -1,3 +1,7 @@
+2004-01-02  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b66
+
+	* Fixed a warning in edit_thumb.php
+
 2003-12-19 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b65
 
 	* Fixed a parse error I caused earlier in config_data.inc
